
- Fixed reading of PostGIS data on Big Endian systems (#515)

- PostGIS: Added better support for alterative schemas (#500)

- AGG Renderer - Enforced default gamma function on all symbolizers to ensure proper antialiasing
  even when gamma is modified on the PolygonSymbolizer. (#512)

- PNG: fixed png256 for large images and some improvements to reduce color corruptions (#522)


Mapnik 0.7.0 Release
--------------------

(Packaged from r1574)

- Core: Fixed linking to external libagg (r1297,r1299)

- Core: Completed full support for PPC (Big endian) architectures (r1352 -> r1357)

- Gdal Plugin: Added support for Gdal overviews, enabling fast loading of > 1GB rasters (#54)

    * Use the gdaladdo utility to add overviews to existing GDAL datasets

- PostGIS: Added an optional 'geometry_table' parameter. The 'geometry_table' used by Mapnik to look up 
  metadata in the geometry_columns and calculate extents (when the 'geometry_field' and 'srid' parameters
  are not supplied). If 'geometry_table' is not specified Mapnik will attempt to determine the name of the 
  table to query based on parsing the 'table' parameter, which may fail for complex queries with more than
  one 'from' keyword. Using this parameter should allow for existing metadata and table indexes to be used
  while opening the door to much more complicated subqueries being passed to the 'table' parameter without
  failing (#260, #426).

- PostGIS Plugin: Added optional 'geometry_field' and 'srid' parameters. If specified these will allow
  Mapnik to skip several queries to try to determine these values dynamically, and can be helpful to avoid
  possible query failures during metadata lookup with complex subqueries as discussed in #260 and #436, but
  also solvable by specifying the 'geometry_table' parameter. (r1300,#376)

- PostGIS: Added an optional 'extent_from_subquery' parameter that when true (while the 'extent' parameter is