@@ -40,6 +40,15 @@ Mapnik 0.7.1 Release
 
 - PNG: fixed png256 for large images and some improvements to reduce color corruptions (#522)
 
+- PNG: Added new quantization method for indexed png format using hextree with full support for alpha
+  channel. Also new method has some optimizations for color gradients common when using elevation based
+  rasters. By default old method using octree is used. (r1680, r1683, #477)
+
+- PNG: Added initial support for passing options to png writter like number of colors, transparency
+  support, quantization method and possibly other in future using type parameter. For example
+  "png8:c=128:t=1:m=h" limits palette to 128 colors, uses only binary transparency (0 - none,
+  1 - binary, 2 - full), and new method of quantization using hextree (h - hextree, o - octree).
+  Existing type "png256" can be also written using "png8:c=256:m=o:t=2"  (r1680, r1683, #477)
 
 Mapnik 0.7.0 Release
 --------------------
